--- a/CHANGES.adoc
+++ b/CHANGES.adoc
@@ -1,14 +1,21 @@
 = Changes
 
+== 3.4.1 (2020-07-22)
+
+* Updated GitHub templates
+* Updated README credit URL
+* Updated to Git Lint 1.0.0
+* Refactored Rakefile requirements
+
 == 3.4.0 (2020-04-01)
 
-- Added README production and development setup instructions
-- Updated Circle CI build label
-- Updated documentation to ASCII Doc format
-- Updated to Code of Conduct 2.0.0
-- Updated to Git Cop 4.0.0
-- Updated to Ruby 2.7.1
-- Removed README images
+* Added README production and development setup instructions
+* Updated Circle CI build label
+* Updated documentation to ASCII Doc format
+* Updated to Code of Conduct 2.0.0
+* Updated to Git Cop 4.0.0
+* Updated to Ruby 2.7.1
+* Removed README images
 
 == 3.3.4 (2020-01-01)
 
